cmake_minimum_required(VERSION 3.13)
project(ACM)

set(CMAKE_CXX_STANDARD 14)

add_executable(Main main.cpp)
add_executable(PAT1001 pat1001.cpp)
add_executable(PAT1002 pat1002.cpp)
add_executable(PAT1003 pat1003.cpp)
add_executable(PAT1004 pat1004.cpp)
add_executable(PAT1005 pat1005.cpp)
add_executable(PAT1006 pat1006.cpp)
add_executable(PAT1007 pat1007.cpp)
add_executable(PAT1008 pat1008.cpp)
add_executable(PAT1009 pat1009.cpp)
add_executable(PAT1010 pat1010.cpp)
add_executable(PAT1011 pat1011.cpp)
add_executable(PAT1012 pat1012.cpp)
add_executable(PAT1013 pat1013.cpp)
add_executable(PAT1014 pat1014.cpp)
add_executable(PAT1015 pat1015.cpp)
add_executable(PAT1016 pat1016.cpp)
add_executable(PAT1017 pat1017.cpp)
add_executable(PAT1018 pat1018.cpp)
add_executable(PAT1019 pat1019.cpp)
add_executable(PAT1020 pat1020.cpp)
add_executable(PAT1021 pat1021.cpp)
add_executable(PAT1022 pat1022.cpp)
add_executable(PAT1023 pat1023.cpp)
add_executable(PAT1024 pat1024.cpp)
add_executable(PAT1025 pat1025.cpp)
add_executable(PAT1026 pat1026.cpp)
add_executable(PAT1027 pat1027.cpp)
add_executable(PAT1028 pat1028.cpp)
add_executable(PAT1029 pat1029.cpp)
add_executable(PAT1030 pat1030.cpp)
add_executable(PAT1031 pat1031.cpp)
add_executable(PAT1032 pat1032.cpp)
add_executable(PAT1033 pat1033.cpp)
add_executable(PAT1034 pat1034.cpp)
add_executable(PAT1035 pat1035.cpp)
add_executable(PAT1036 pat1036.cpp)
add_executable(PAT1037 pat1037.cpp)
add_executable(PAT1038 pat1038.cpp)
add_executable(PAT1039 pat1039.cpp)
add_executable(PAT1040 pat1040.cpp)
add_executable(PAT1041 pat1041.cpp)
add_executable(PAT1042 pat1042.cpp)
add_executable(PAT1043 pat1043.cpp)
add_executable(PAT1044 pat1044.cpp)
add_executable(PAT1045 pat1045.cpp)
add_executable(PAT1046 pat1046.cpp)
add_executable(PAT1047 pat1047.cpp)
add_executable(PAT1048 pat1048.cpp)
add_executable(PAT1049 pat1049.cpp)
add_executable(PAT1050 pat1050.cpp)
add_executable(PAT1051 pat1051.cpp)
add_executable(PAT1052 pat1052.cpp)
add_executable(PAT1053 pat1053.cpp)
add_executable(PAT1054 pat1054.cpp)
add_executable(PAT1055 pat1055.cpp)
add_executable(PAT1056 pat1056.cpp)
add_executable(PAT1057 pat1057.cpp)
add_executable(PAT1058 pat1058.cpp)
add_executable(PAT1059 pat1059.cpp)
add_executable(PAT1060 pat1060.cpp)
add_executable(PAT1061 pat1061.cpp)
add_executable(PAT1062 pat1062.cpp)
add_executable(PAT1063 pat1063.cpp)
add_executable(PAT1071 pat1071.cpp)